<resources>
    <string name="app_name">Animations Demo</string>
    <string name="action_settings">Settings</string>

    <string name="animators">Animators</string>
    <string name="transitions">Transitions</string>
    <string name="frame_animations">Frame Animations</string>
    <string name="morphing">Morphing</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Animator Fragment-->
    <string name="view_property_animator">ViewPropertyAnimator</string>
    <string name="object_animator">ObjectAnimator</string>
    <string name="value_animator">ValueAnimator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
