<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_animators"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/animators" />
        <item
            android:id="@+id/nav_transitions"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/transitions" />
        <item
            android:id="@+id/nav_frame_animations"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/frame_animations" />
        <item
            android:id="@+id/nav_morphing"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/morphing" />
    </group>
</menu>
